generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-06/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::getCountedByCountField(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:121:21: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  121 |   if (!FAD || !FAD->isFlexibleArrayMember())
      |                     ^~~~~~~~~~~~~~~~~~~~~
      |                     isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:30: error: ‘class clang::CountedByAttr’ has no member named ‘getCountExpr’
  127 |     if (const Expr *E = CBA->getCountExpr()) {
      |                              ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::extractCountedByFAccess(const clang::Expr*, clang::ento::CheckerContext&, const clang::FieldDecl*&, const clang::FieldDecl*&, const clang::ento::MemRegion*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:191:12: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  191 |   if (!FD->isFlexibleArrayMember())
      |            ^~~~~~~~~~~~~~~~~~~~~
      |            isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:269:13: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  269 |     if (!F->isFlexibleArrayMember())
      |             ^~~~~~~~~~~~~~~~~~~~~
      |             isFlexibleArrayMemberLike
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
